--- a/Microsoft.Toolkit.Uwp.SampleApp/App.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/App.xaml
@@ -798,8 +798,7 @@
                                             Background="Transparent"
                                             HorizontalAlignment="Right"
                                             BorderThickness="0"
-                                            Opacity="0.6"
-                                            TabIndex="1">
+                                            Opacity="0.6">
                                         <FontIcon Margin="16,12"
                                                   FontFamily="Segoe MDL2 Assets"
                                                   FontSize="16"
@@ -815,7 +814,6 @@
                                                     VerticalAlignment="Center"
                                                     IsTabStop="False"
                                                     QueryIcon="Find"
-                                                    TabIndex="1"
                                                     extensions:VisualEx.NormalizedCenterPoint="0.95, 0.5, 0"
                                                     Visibility="Collapsed" >
                                         <animations:Implicit.ShowAnimations>
@@ -886,82 +884,91 @@
 
                                 <Grid x:Name="MoreInfoContent"
                                       Width="260"
-                                      Height="300"
+                                      Height="320"
                                       extensions:VisualEx.NormalizedCenterPoint="0.5">
+                                    <Grid VerticalAlignment="Top">
 
-                                    <toolkitControls:DropShadowPanel 
-                                                                     VerticalContentAlignment="Stretch"
-                                                                     HorizontalContentAlignment="Stretch"
-                                                                     ShadowOpacity="0.6"
-                                                                     Color="Black"
-                                                                     BlurRadius="10">
-                                        <Border Background="#F4F3F3F3"
-                                                    Grid.RowSpan="3"
+                                        <toolkitControls:DropShadowPanel 
+                                                                         VerticalContentAlignment="Stretch"
+                                                                         HorizontalContentAlignment="Stretch"
+                                                                         ShadowOpacity="0.6"
+                                                                         Color="Black"
+                                                                         BlurRadius="10">
+                                            <Border Background="#F4F3F3F3"
                                                     Opacity="0.96">
-                                            <interactivity:Interaction.Behaviors>
-                                                <behaviors:Blur AutomaticallyStart="True"
-                                                                Delay="0"
-                                                                Value="3"
-                                                                Duration="0" />
-                                            </interactivity:Interaction.Behaviors>
-                                        </Border>
-                                    </toolkitControls:DropShadowPanel>
+                                                <interactivity:Interaction.Behaviors>
+                                                    <behaviors:Blur AutomaticallyStart="True"
+                                                                    Delay="0"
+                                                                    Value="3"
+                                                                    Duration="0" />
+                                                </interactivity:Interaction.Behaviors>
+                                            </Border>
+                                        </toolkitControls:DropShadowPanel>
 
-                                    <Grid Padding="10">
-                                        <Grid.RowDefinitions>
-                                            <RowDefinition Height="160" />
-                                            <RowDefinition Height="*" />
-                                        </Grid.RowDefinitions>
-
-                                        <Image Width="240"
-                                               x:Name="MoreInfoImage"
-                                                   Height="160"
-                                                   Grid.Row="0"
-                                                   Source="{Binding Icon}" />
-                                        
-                                        <Grid Grid.Row="1">
+                                        <Grid Padding="10">
                                             <Grid.RowDefinitions>
-                                                <RowDefinition Height="Auto" />
-                                                <RowDefinition Height="80" />
+                                                <RowDefinition Height="160" />
+                                                <RowDefinition Height="*" />
                                             </Grid.RowDefinitions>
-                                            <TextBlock Grid.Row="0"
-                                                       Margin="0, 10"
-                                                       FontSize="14"
-                                                       FontWeight="SemiBold"
-                                                       Foreground="Black"
-                                                       Text="{Binding Name}"
-                                                       TextTrimming="CharacterEllipsis" />
-                                            <TextBlock Grid.Row="1"
-                                                       FontSize="12"
-                                                       Foreground="Black"
-                                                       Text="{Binding About}"
-                                                       TextWrapping="Wrap" />
 
-                                            <animations:Implicit.ShowAnimations>
-                                                <animations:OpacityAnimation From="0" To="1" Duration="0:0:0.4" Delay="0:0:0.2" SetInitialValueBeforeDelay="True"></animations:OpacityAnimation>
-                                                <animations:TranslationAnimation From="0, 20, 0" To="0" Duration="0:0:0.3" Delay="0:0:0.2"></animations:TranslationAnimation>
-                                            </animations:Implicit.ShowAnimations>
-                                        </Grid>
+                                            <Image Width="240"
+                                                   x:Name="MoreInfoImage"
+                                                       Height="160"
+                                                       Grid.Row="0"
+                                                       Source="{Binding Icon}" />
                                         
-                                        <!--<Grid Grid.Row="3"
-                                                    Margin="0,16,0,0"
-                                                    Background="{StaticResource Brush-Blue-01}"
-                                                    Visibility="{Binding BadgeUpdateVersionRequired, Converter={StaticResource EmptyStringToObject}}">
-                                                <TextBlock Margin="0,2,0,2"
-                                                            HorizontalAlignment="Center"
-                                                            VerticalAlignment="Bottom"
-                                                            Foreground="White"
-                                                            Text="{Binding BadgeUpdateVersionRequired}" />
-                                            </Grid>-->
+                                            <StackPanel Grid.Row="1">
+                                                <TextBlock Margin="0, 10"
+                                                           FontSize="14"
+                                                           FontWeight="SemiBold"
+                                                           Foreground="Black"
+                                                           Text="{Binding Name}"
+                                                           TextTrimming="CharacterEllipsis" />
+                                                
+                                                <TextBlock FontSize="12"
+                                                           Foreground="Black"
+                                                           Text="{Binding About}"
+                                                           TextWrapping="Wrap" />
+
+                                                <Border Margin="0,10,0,0"
+                                                      Opacity="1"
+                                                      HorizontalAlignment="Left"
+                                                      Background="{StaticResource Brush-Blue-01}"
+                                                      Visibility="{Binding BadgeUpdateVersionRequired, Converter={StaticResource EmptyStringToObject}}">
+                                                    <TextBlock Margin="2"
+                                                               FontSize="10"
+                                                               HorizontalAlignment="Center"
+                                                               VerticalAlignment="Bottom"
+                                                               Foreground="White"
+                                                               Text="{Binding BadgeUpdateVersionRequired}" />
+
+                                                    <animations:Implicit.HideAnimations>
+                                                        <animations:OpacityAnimation To="0"  Duration="0:0:0.01"></animations:OpacityAnimation>
+                                                    </animations:Implicit.HideAnimations>
+                                                    <animations:Implicit.ShowAnimations>
+                                                        <animations:OpacityAnimation From="0" To="1" Duration="0:0:0.4" Delay="0:0:0.2" SetInitialValueBeforeDelay="True"></animations:OpacityAnimation>
+                                                        <animations:TranslationAnimation From="0, 20, 0" To="0" Duration="0:0:0.3" Delay="0:0:0.2"></animations:TranslationAnimation>
+                                                    </animations:Implicit.ShowAnimations>
+                                                </Border>
+
+                                                <animations:Implicit.ShowAnimations>
+                                                    <animations:OpacityAnimation From="0" To="1" Duration="0:0:0.4" Delay="0:0:0.2" SetInitialValueBeforeDelay="True"></animations:OpacityAnimation>
+                                                    <animations:TranslationAnimation From="0, 20, 0" To="0" Duration="0:0:0.3" Delay="0:0:0.2"></animations:TranslationAnimation>
+                                                </animations:Implicit.ShowAnimations>
+                                            </StackPanel>
+                                        
+                                        
+                                        </Grid>
                                     </Grid>
+
 
                                     <animations:Implicit.ShowAnimations>
                                         <animations:OpacityAnimation From="0" To="1" Duration="0:0:0.3"></animations:OpacityAnimation>
-                                        <animations:ScaleAnimation From="0" To="1" Duration="0:0:0.3"></animations:ScaleAnimation>
+                                        <animations:ScaleAnimation From="0.5" To="1" Duration="0:0:0.3"></animations:ScaleAnimation>
                                     </animations:Implicit.ShowAnimations>
                                     <animations:Implicit.HideAnimations>
                                         <animations:OpacityAnimation To="0" From="1" Duration="0:0:0.2"></animations:OpacityAnimation>
-                                        <animations:ScaleAnimation To="0" From="1" Duration="0:0:0.2"></animations:ScaleAnimation>
+                                        <animations:ScaleAnimation To="0.5" From="1" Duration="0:0:0.2"></animations:ScaleAnimation>
                                     </animations:Implicit.HideAnimations>
                                 </Grid>
 
