Make BladeItem Title obsolete in favor of the Header property from the Expander

--- a/Microsoft.Toolkit.Uwp.UI.Controls/BladeView/BladeView.xaml
+++ b/Microsoft.Toolkit.Uwp.UI.Controls/BladeView/BladeView.xaml
@@ -132,12 +132,10 @@
                                 <ColumnDefinition Width="Auto" />
                             </Grid.ColumnDefinitions>
 
-                            <TextBlock x:Name="TitleBar"
-                                       Margin="4,0,0,0"
-                                       HorizontalAlignment="Left"
-                                       VerticalAlignment="Center"
-                                       Foreground="{TemplateBinding TitleBarForeground}"
-                                       Text="{TemplateBinding Title}" />
+                            <ContentPresenter x:Name="TitleBar"
+                                              Content="{TemplateBinding Header}"
+                                              ContentTemplate="{TemplateBinding HeaderTemplate}"
+                                              Foreground="{TemplateBinding TitleBarForeground}"/>
                             <Button Name="EnlargeButton"
                                     Grid.Column="1"
                                     TabIndex="0"
