--- a/Microsoft.Toolkit.Uwp.UI.Controls/BladeView/BladeView.xaml
+++ b/Microsoft.Toolkit.Uwp.UI.Controls/BladeView/BladeView.xaml
@@ -85,6 +85,8 @@
 
     <Style TargetType="controls:BladeItem">
         <Setter Property="VerticalContentAlignment" Value="Stretch" />
+        <Setter Property="TitleBarBackground" Value="{ThemeResource DefaultTextForegroundThemeBrush}" />
+        <Setter Property="CloseButtonForeground" Value="{ThemeResource ContentControlThemeFontFamily}" />
         <Setter Property="FontFamily" Value="{ThemeResource ContentControlThemeFontFamily}" />
         <Setter Property="FontSize" Value="{ThemeResource ControlContentThemeFontSize}" />
         <Setter Property="Background" Value="Transparent" />
