Update Monaco.Editor to 0.4.0 Add Focus on Xaml Pivot Item Selection Add Tracking for Internal Monaco Editor Exceptions

--- a/Microsoft.Toolkit.Uwp.SampleApp/Shell.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/Shell.xaml
@@ -170,8 +170,10 @@
                 <PivotItem x:Name="XamlPivotItem"
                             Header="XAML">
                     <monaco:CodeEditor x:Name="XamlCodeRenderer"
-                                        KeyDown="XamlCodeRenderer_KeyDown"
-                                        Loading="XamlCodeRenderer_Loading"/>
+                                       CodeLanguage="xml"
+                                       KeyDown="XamlCodeRenderer_KeyDown"
+                                       Loading="XamlCodeRenderer_Loading"
+                                       InternalException="XamlCodeRenderer_InternalException"/>
                 </PivotItem>
 
                 <PivotItem x:Name="XamlReadOnlyPivotItem"
