--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/Expander/ExpanderPage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/Expander/ExpanderPage.xaml
@@ -16,8 +16,7 @@
                                 Foreground="White"
                                 Background="{Binding Path=BackgroundExpander1.Value, Mode=TwoWay}"
                                 IsExpanded="{Binding Path=IsExpanded1.Value, Mode=TwoWay}"
-                                ExpandDirection="{Binding Path=ExpandDirection1.Value, Mode=TwoWay}"
-                                DisplayMode="{Binding Path=DisplayMode1.Value, Mode=TwoWay}">
+                                ExpandDirection="{Binding Path=ExpandDirection1.Value, Mode=TwoWay}">
                     <Grid Height="250">
                         <TextBlock HorizontalAlignment="Center" 
                                 TextWrapping="Wrap" 
@@ -41,8 +40,7 @@
                                 Foreground="White"
                                 Background="{Binding Path=BackgroundExpander2.Value, Mode=TwoWay}"
                                 IsExpanded="{Binding Path=IsExpanded2.Value, Mode=TwoWay}"
-                                ExpandDirection="{Binding Path=ExpandDirection2.Value, Mode=TwoWay}"
-                                DisplayMode="{Binding Path=DisplayMode2.Value, Mode=TwoWay}">
+                                ExpandDirection="{Binding Path=ExpandDirection2.Value, Mode=TwoWay}">
                     <Grid Height="250">
                         <TextBlock HorizontalAlignment="Center" 
                                 TextWrapping="Wrap" 
